[package]
name = "dos2unix"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
env_logger = "0.11.5"
filetime = "0.2.25"
log = "0.4.22"
structopt = "0.3.26"
walkdir = "2.5.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 'z'  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization
panic = 'abort'  # Remove stack unwinding code