[package]
name = "dos2unix"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "handleapi", "processenv", "winbase", "winnt"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 'z'  # Optimize for size
lto = true       # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units to increase optimization
panic = 'abort'  # Remove stack unwinding code