[package]
name = "dos2unix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dos2unix"
path = "src/bin/dos2unix.rs"

[[bin]]
name = "unix2dos"
path = "src/bin/unix2dos.rs"

[lib]
name = "dos2unix_lib"
path = "src/lib.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "handleapi", "processenv", "winbase", "winnt"] }

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'